fix: change help button z-index

--- a/rs-css/src/main/global-styles/abstracts/_variables.scss
+++ b/rs-css/src/main/global-styles/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 // Z-index layers
 $default-layer: 0;
+$help-button-layer: 1;
 $drag-n-drop-layer: 2;
 $drag-n-drop-close-layer: 3;
 $drag-n-drop-dragged-layer: 4;
